<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{16dd2937-1a56-496b-9281-972e8d7713a8}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	st_event: ST_Event;
	once: BOOL := FALSE;
	
	csvEventStorage: FB_CSVEventStorage;
	eventLogger : FB_EventLogger(csvEventStorage);
END_VAR
 ]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF once THEN
	st_event.eEventType := E_EventType.alarm;
	st_event.eEventSeverity := TcEventSeverity.Critical;
	st_event.sEventText :=  'This is an event text';
	
	eventLogger.AddEvent(st_event);
	once := FALSE;
END_IF

csvEventStorage();

(*IF NOT once THEN
	F_UpdateEventTimeStamp(st_event:= st_event);
	once := TRUE;
END_IF
*)]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="15" Count="0" />
      <LineId Id="25" Count="3" />
      <LineId Id="23" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="13" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>